--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = https://hotdogs-server.herokuapp.com
-USER = postgres
+USER = server
 HOST = localhost
-DB = hot_dogs_db
-PASSWORD = 123I
+DB = werdb
+PASSWORD = root
 DB_PORT = 5432
